Fix slow performance when slow connection
1. Create thumb for each image and save in server, load thumb images
when real image not required.
2. use httpconnection to replace httpclient, it is faster connection.
3. separate loading images and text, make user easy to open content.
4. create cache for images using universalimageloader.
5. fix bug in login page
6. fix bug in postactivityfragment, outofmemory bug in image categories.
7. fix problem when city is too long.